[tool.poetry]
name = "wraplot"
version = "0.1.0"
description = "A simple python wrapper of matplotlib"
authors = ["Luca Moschella <luca.moschella94@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1.2"
imageio = "^2.6.1"
imageio-ffmpeg = "^0.3.0"
numpy = "^1.17.4"
streamlit = { version = "^0.51.0", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
